--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,4 @@
 <h1>Welcome to the Search Page!</h1>
-<h2>{{searchCtrlTest}}</h2>
 <form ng-submit="searchTag()">
 	<fieldset class="form-group">
 		<label for="searchtags">Tag search</label>
@@ -10,11 +9,13 @@
 <row>
 <div ng-repeat="photo in photos" class="thumbnail text-center col-md-3">
 	<img src={{photo.images.low_resolution.url}}> by @{{photo.user.full_name}}
-	<a ng-click="favoritePhoto(photo)" href="#">favorite</a>
+	<a ng-click="searchTag(photo)" href="#">favorite</a>
 	<div ng-if="photo.likes.count > 0">
 		{{photo.likes.count}} <span ng-pluralize count = "photo.likes.count"
 			when="{'1' : 'Like','other' : 'Likes'}">
 		</span>
 	</div>
 </div>
-</row>
+</row
+
+<!-- need savePhoto function here somewhere -->
